src/test/deca/context/valid/created/null-object2.deca
//Description :
// Test d'un objet null
//
// Resultats :
//  OUI

class A {
    int a = 3;

    void printA() {
        print("OUI");
    }
}

{
    A obj = null;
    obj.printA();
}