src/test/deca/context/invalid/created/method-call-int.deca
//Description :
// Test d'un appel de méthode sur un objet non class
//
// Resultats :
// Erreur


{
    int a = 3;
    a.abc();
}
